--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Under Construction</h1>
+        <div class="container-fluid">
+            <!-- Title -->
+            <div class="row justify-content-center">
+                <h1 class="col-8">Wildside Creations</h1>
+            </div>
+        </div>
     </body>
 </html>
