--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                 </div>
             </div>
             <br>
+
+            <!-- Footer -->
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col">Copyright (c) 2024-2024 by Wildside Creations. All rights reserved.</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Website and layout by DylanCheetah</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
