--- a/index.html
+++ b/index.html
@@ -102,6 +102,49 @@
             </div>
             <br>
 
+            <!-- Head Shot Refs -->
+            <div class="row justify-content-center">
+                <div class="col-8 card">
+                    <div class="card-body">
+                        <div class="row">
+                            <h2 class="col card-title">Head Shot</h2>
+                        </div>
+                        <div class="row">
+                            <hr class="col">
+                        </div>
+                        <div class="row">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        </div>
+                        <div class="row">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        </div>
+                        <br>
+                        <div class="row">
+                            <h4 class="col">Head Shot</h4>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Flat colored headshot</b>
+                            <div class="col">$5.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Shaded headshot</b>
+                            <div class="col">$10.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Detailed fur shading</b>
+                            <div class="col">$15.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Additional character</b>
+                            <div class="col">$3.00</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+
             <!-- Footer -->
             <div class="row justify-content-center">
                 <div class="col-8">
