Add additional fees.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,26 @@
             </div>
             <br>
 
+            <!-- Additional Fees -->
+            <div class="row justify-content-center">
+                <div class="col-8 card">
+                    <div class="card-body">
+                        <div class="row">
+                            <h4 class="col">Additional Fees (Included for customs)</h4>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Big accessories (Clothing, weapons, harnesses)</b>
+                            <div class="col">$10.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Small accessories (Necklaces, collars,feathers)</b>
+                            <div class="col">$5.00</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+
             <!-- Footer -->
             <div class="row justify-content-center">
                 <div class="col-8">
