Add custom character design.

--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
             </div>
             <br>
 
+            <!-- Custom Character Design Refs -->
+            <div class="row justify-content-center">
+                <div class="col-8 card">
+                    <div class="card-body">
+                        <div class="row">
+                            <h2 class="col card-title">Custom Character Designs</h2>
+                        </div>
+                        <div class="row">
+                            <hr class="col">
+                        </div>
+                        <div class="row">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        </div>
+                        <div class="row">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        </div>
+                        <br>
+                        <div class="row">
+                            <h4 class="col">Custom Character Designs</h4>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Large custom based design</b>
+                            <div class="col">$15.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Small Custom based design</b>
+                            <div class="col">$10.00</div>
+                        </div>
+                        <div class="row">
+                            <b class="col-3">Complex design fee</b>
+                            <div class="col">$5.00</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+
             <!-- Footer -->
             <div class="row justify-content-center">
                 <div class="col-8">
