--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Complex fullbody character refrence sheet</b>
+                            <b class="col-3">Complex fullbody character reference sheet</b>
                             <div class="col">$15.00</div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             <h4 class="col">Partial Reference Sheet</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Simple character refrence sheet</b>
+                            <b class="col-3">Simple character reference sheet</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
