Add fullbody and halfbody refs.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                             <hr class="col">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/yG7siDx.png">
+                            <img class="col m-1" src="https://i.imgur.com/JvXEO96.png">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/SSunNM5.jpeg">
                             <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
                         </div>
                         <br>
@@ -70,8 +70,8 @@
                             <hr class="col">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/Inf81sc.jpeg">
+                            <img class="col m-1" src="https://i.imgur.com/X0Dc4s9.jpeg">
                         </div>
                         <div class="row">
                             <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
