Add headshot refs.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                             <hr class="col">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/BZiXsB3.png">
+                            <img class="col m-1" src="https://i.imgur.com/ZX3XzQE.png">
                         </div>
                         <div class="row">
                             <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
