Add partial refs.

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                             <hr class="col">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/ToWC8sj.png">
+                            <img class="col m-1" src="https://i.imgur.com/VMp7xwz.png">
                         </div>
                         <div class="row">
                             <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
