Add custom character refs.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             <hr class="col">
                         </div>
                         <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                            <img class="col m-1" src="https://i.imgur.com/1cJhmVe.png">
                             <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
                         </div>
                         <div class="row">
