Adjust all reference images.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                             <img class="col m-1" src="https://i.imgur.com/yG7siDx.png">
                             <img class="col m-1" src="https://i.imgur.com/JvXEO96.png">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/SSunNM5.jpeg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/SSunNM5.jpeg">
                         </div>
                         <br>
                         <div class="row">
@@ -73,10 +72,6 @@
                             <img class="col m-1" src="https://i.imgur.com/Inf81sc.jpeg">
                             <img class="col m-1" src="https://i.imgur.com/X0Dc4s9.jpeg">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                        </div>
                         <br>
                         <div class="row">
                             <h4 class="col">Halfbody</h4>
@@ -112,13 +107,11 @@
                         <div class="row">
                             <hr class="col">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/BZiXsB3.png">
-                            <img class="col m-1" src="https://i.imgur.com/ZX3XzQE.png">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/BZiXsB3.png">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/ZX3XzQE.png">
                         </div>
                         <br>
                         <div class="row">
@@ -155,13 +148,8 @@
                         <div class="row">
                             <hr class="col">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                        </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/VMp7xwz.png">
                         </div>
                         <br>
                         <div class="row">
@@ -190,13 +178,8 @@
                         <div class="row">
                             <hr class="col">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/ToWC8sj.png">
-                            <img class="col m-1" src="https://i.imgur.com/VMp7xwz.png">
-                        </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/ToWC8sj.png">
                         </div>
                         <br>
                         <div class="row">
@@ -245,13 +228,8 @@
                         <div class="row">
                             <hr class="col">
                         </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/1cJhmVe.png">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                        </div>
-                        <div class="row">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
-                            <img class="col m-1" src="https://i.imgur.com/5wSQzkP.jpg">
+                        <div class="row justify-content-center">
+                            <img class="col-6 m-1" src="https://i.imgur.com/1cJhmVe.png">
                         </div>
                         <br>
                         <div class="row">
