--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+        <!-- Theme -->
+        <link href="/style.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
@@ -18,7 +21,7 @@
 
             <!-- Fullbody Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Fullbody</h2>
@@ -60,7 +63,7 @@
 
             <!-- Halfbody Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Halfbody</h2>
@@ -99,7 +102,7 @@
 
             <!-- Head Shot Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Head Shot</h2>
@@ -140,7 +143,7 @@
 
             <!-- Single Fullbody Reference Sheet Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Single Fullbody Reference Sheet</h2>
@@ -170,7 +173,7 @@
 
             <!-- Partial Reference Sheet Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Partial Reference Sheet</h2>
@@ -200,7 +203,7 @@
 
             <!-- Additional Fees -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h4 class="col">Additional Fees (Included for customs)</h4>
@@ -220,7 +223,7 @@
 
             <!-- Custom Character Design Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card">
+                <div class="col-8 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Custom Character Designs</h2>
