--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <!-- Fullbody Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Fullbody</h2>
@@ -63,7 +63,7 @@
 
             <!-- Halfbody Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Halfbody</h2>
@@ -102,7 +102,7 @@
 
             <!-- Head Shot Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Head Shot</h2>
@@ -143,7 +143,7 @@
 
             <!-- Single Fullbody Reference Sheet Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Single Fullbody Reference Sheet</h2>
@@ -173,7 +173,7 @@
 
             <!-- Partial Reference Sheet Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Partial Reference Sheet</h2>
@@ -203,7 +203,7 @@
 
             <!-- Additional Fees -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h4 class="col">Additional Fees (Included for customs)</h4>
@@ -223,7 +223,7 @@
 
             <!-- Custom Character Design Refs -->
             <div class="row justify-content-center">
-                <div class="col-8 card bg-card">
+                <div class="col-lg-8 col-md-10 col-sm-12 card bg-card">
                     <div class="card-body">
                         <div class="row">
                             <h2 class="col card-title">Custom Character Designs</h2>
