Finish adjusting tablet and phone layout.

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                             <h4 class="col">Fullbody</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Flat colored full body</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Flat colored full body</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Shaded fullbody</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Shaded fullbody</b>
                             <div class="col">$20.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Detailed fur shading</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Detailed fur shading</b>
                             <div class="col">$25.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Additional character</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Additional character</b>
                             <div class="col">$5.00</div>
                         </div>
                     </div>
@@ -80,19 +80,19 @@
                             <h4 class="col">Halfbody</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Flat colored bust</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Flat colored bust</b>
                             <div class="col">$8.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Shaded bust</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Shaded bust</b>
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Detailed fur shading</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Detailed fur shading</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Additional character</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Additional character</b>
                             <div class="col">$5.00</div>
                         </div>
                     </div>
@@ -121,19 +121,19 @@
                             <h4 class="col">Head Shot</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Flat colored headshot</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Flat colored headshot</b>
                             <div class="col">$5.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Shaded headshot</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Shaded headshot</b>
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Detailed fur shading</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Detailed fur shading</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Additional character</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Additional character</b>
                             <div class="col">$3.00</div>
                         </div>
                     </div>
@@ -159,11 +159,11 @@
                             <h4 class="col">Single Fullbody Reference Sheet</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Simple fullbody Reference sheet</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Simple fullbody Reference sheet</b>
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Complex fullbody character reference sheet</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Complex fullbody character reference sheet</b>
                             <div class="col">$15.00</div>
                         </div>
                     </div>
@@ -189,11 +189,11 @@
                             <h4 class="col">Partial Reference Sheet</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Simple character reference sheet</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Simple character reference sheet</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Complex character reference sheet</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Complex character reference sheet</b>
                             <div class="col">$20.00</div>
                         </div>
                     </div>
@@ -209,11 +209,11 @@
                             <h4 class="col">Additional Fees (Included for customs)</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Big accessories (Clothing, weapons, harnesses)</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Big accessories (Clothing, weapons, harnesses)</b>
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Small accessories (Necklaces, collars,feathers)</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Small accessories (Necklaces, collars,feathers)</b>
                             <div class="col">$5.00</div>
                         </div>
                     </div>
@@ -239,15 +239,15 @@
                             <h4 class="col">Custom Character Designs</h4>
                         </div>
                         <div class="row">
-                            <b class="col-3">Large custom based design</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Large custom based design</b>
                             <div class="col">$15.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Small Custom based design</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Small Custom based design</b>
                             <div class="col">$10.00</div>
                         </div>
                         <div class="row">
-                            <b class="col-3">Complex design fee</b>
+                            <b class="col-lg-3 col-md-5 col-sm-6">Complex design fee</b>
                             <div class="col">$5.00</div>
                         </div>
                     </div>
